# OpenClassBook

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  restart-backend.bat  restart-backend.ps1
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Backend.md  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: README.md  env.py  script.py.mako
backend/app/: email_provider.py  main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: __init__.py  articles.py  auth.py  authors.py  books.py  exports.py  files.py  invites.py  join.py  router.py  templates.py
backend/app/core/: config.py  rate_limit.py
backend/app/db/: database.py
backend/app/models/: __init__.py  article.py  author.py  book.py  invitation.py  template.py  user.py
backend/app/repositories/: __init__.py  article.py  auth.py  author.py  base.py  book.py  export.py  invitation.py  invite.py  join.py  template.py  upload.py
backend/app/schemas/: __init__.py  article.py  auth.py  author.py  book.py  common.py  export.py  invitation.py  template.py  upload.py
backend/app/services/: __init__.py  article.py  auth.py  author.py  base.py  book.py  docx_formatting.py  docx_word_converter.py  export.py  invitation.py  invite.py  join.py  page_asset_renderer.py  pdf_renderer.py  template.py  upload.py  verification.py
backend/app/storage/: __init__.py  local.py
backend/app/utils/: __init__.py
backend/tests/: conftest.py  test_app.py  test_auth.py  test_book_ownership.py  test_config.py  test_docx_word_converter.py  test_export_assets.py  test_invitation_lifecycle.py  test_publication_templates.py  test_security.py  test_uploads.py
docs/: OpenClassBook Official Cover Prompt.txt  PRDv1.0.md  PRDv1.1.md  SECURITY_AUDIT_2026-07-23.md  V1_RELEASE_REVIEW.md  prdv1.3.md  prdv1.4.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
frontend/public/templates/: README.md
frontend/src/: App.tsx  main.tsx
frontend/src/components/: account-menu.tsx  app-error-boundary.tsx  class-collection-fields.tsx  language-toggle.tsx  numbering-settings-fields.tsx  publication-page-footer.tsx  (+2 more)
scripts/: build_template_assets.py
(+100 files in other folders)
