[project]
name = "openclassbook-backend"
version = "1.0.0"
description = "Local-first publishing backend for OpenClassBook."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2.0",
  "docx2pdf>=0.1.8,<1.0 ; sys_platform == 'darwin' or sys_platform == 'win32'",
  "fastapi>=0.115,<1.0",
  "mammoth>=1.12,<2.0",
  "nh3>=0.3,<0.4",
  "pillow>=12.3,<13.0",
  "pydantic>=2.10,<3.0",
  "pydantic-settings>=2.7,<3.0",
  "pypdf>=6.14,<7.0",
  "python-multipart>=0.0.32",
  "reportlab>=4.2,<5.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
  "xhtml2pdf>=0.2.17,<0.3",
]

[dependency-groups]
dev = [
  "httpx2>=2.7,<3.0",
  "pytest>=9.0.3,<10.0",
  "python-docx>=1.2,<2.0",
  "ruff>=0.8,<1.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
